k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0.6
        ports:
          - containerPort: 27017
        volumeMounts:
        - name: mongodb
          mountPath: /data/db
      volumes:
      - name: mongodb
        persistentVolumeClaim:
          claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
