k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: "jastran.cis188.org"
      http:
        paths:
          - path: "/blog"
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8000
  tls:
    - hosts:
        - "jastran.cis188.org"
      secretName: jastran-cis188-org-tls
